[project]
name = "bot-webhook"
version = "0.1.0"
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "flask>=1.0.3",
    "websockets>=4.0.1",
    "gunicorn>=20.1.0",
    "python-dotenv>=0.20.0",
]
license = {text = "MIT"}
requires-python = ">=3.6"
[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
